src/test/ui/consts/control-flow/feature-gate-const-if-match.if_match.stderr
error: fatal error triggered by #[rustc_error]
  --> $DIR/feature-gate-const-if-match.rs:109:1
   |
LL | / fn main() {
LL | |     let _ = [0; {
LL | |         let x = if false { 0 } else { 1 };
LL | |
...  |
LL | |     }];
LL | | }
   | |_^

error: aborting due to previous error

